BlinkGC: Fix ThreadState::EstimatedLiveSize for webpages with no JS

ThreadState::EstimatedLiveSize always returns 0 for webpages with no JS because WrapperCountAtLastGC is always 0.
This caused GCs to (almost) always trigger.
By returning estimation_base_size in this case, we can maintain the existing behavior before the first GC, but return the appropriate estimated live size for any calls after the first GC.

Bug: 695466
Change-Id: I76972e07d00a27aa14e3204bf77dada51fa00c95
Reviewed-on: https://chromium-review.googlesource.com/659718
Commit-Queue: Keishi Hattori <keishi@chromium.org>
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#501152}
Former-commit-id: 13ce8f521d57f624eed2588e6bc30713e376a55d